<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:columnCount="4"
            android:rowCount="5"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/button_AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_1"
                android:text="@string/key_AC"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_1"
                android:text="@string/key_plus_minus"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_precent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_1"
                android:text="@string/key_precent"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/key_divide"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_7"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_8"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_9"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/key_multiply"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_4"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_5"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_6"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/key_minus"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_1"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_2"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_3"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/key_plus"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_0"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/gray_2"
                android:text="@string/key_dot"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/key_equals"
                android:textSize="@dimen/text_size_button" />

        </GridLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>